[package]
name = "https-server-tokio-rustls"
version = "0.1.0"
authors = ["Chun-Min Chang <chun.m.chang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = [ "full" ] }
tokio-rustls = "0.22.0"
argh = "0.1"